# ex_PROG

./: .gitignore  CMakeLists.txt  README.md
Exames_Resolvidos/: 2223_Normal_1.c
Exames_Resolvidos/2223_Normal/: 1.c  2.c  3.c
Ficha 1/: ex1.c  ex2.c  ex3.c
Ficha 11/: ex2.c  ex3.c
Ficha 2/: ex2.c  ex6.c  ex8.c
Ficha 3/: ex3.c  ex4.c
Ficha 4/: ex1.c
Ficha 6/: ex1.c  ex2.c
Ficha 7/: ex1.c  ex2.c
Ficha 8/: ex1.c
